--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,12 @@
 				<div class="sub-wrap">
 					<div class="speech-one">
 						<div class="emoji-one">💬</div>
-						<div class="bubble-one">{{config.details.bubbleone}}</div>
+						<div class="bubble-one">
+							<!-- {{config.details.bubbleone}} -->
+							the right lube is a platform for thoughts by <div class="maz">Maz Murray</div> and <div class="hava">Hava Carvajal</div>, plus
+							anyone else who wants to join in!<br />
+							contact us at: <a href="mailto:therightlube@gmail.com">therightlube@gmail.com</a>
+						</div>
 					</div>
 				</div>
 				<div class="sub-wrap">
