--- a/views/writing.html
+++ b/views/writing.html
@@ -11,7 +11,7 @@
 			{{# arena }}
 			<div class="arena-block" id="section_{{ id }}">
 				<div id="arena-block-title"
-					>{{ title }}<div class="more">read</div>
+					><h2>{{ title }}</h2><div class="more">read</div>
 					<!-- link to it's id -->
 
 					<!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
