--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,13 @@
 		{{> components/nav }}
 
 		<div class="speech-image">
-			<div class="bio">{{config.details.bio}}</div>
 			<div class="socials">
 				<a href="https://www.instagram.com/therightlube/"><i class="fa">&#xf16d;</i></a>
 				<a href="https://twitter.com/therightlube?lang=en"><i class="fa">&#xf099;</i></a>
 			</div>
-			<img src="../assets/TRL.PNG" />
+			<!-- <div class="gem"><img src="../assets/SickGentleFluke-max-1mb.gif"/></div> -->
+			<div class="bio">{{config.details.bio}}</div>
+			<div class="cover-photo"><img src="../assets/TRL.PNG"/></div>
 			<div class="subtitle">
 				<div class="sub-wrap">
 					<div class="speech-one">
