--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 			</div>
 			<!-- <div class="gem"><img src="../assets/SickGentleFluke-max-1mb.gif"/></div> -->
 			<div class="bio">{{config.details.bio}}</div>
-			<div class="cover-photo"><img src="../assets/TRL.PNG"/></div>
+			<div class="cover-photo"><img src="../assets/TRL.png"/></div>
 			<div class="subtitle">
 				<div class="sub-wrap">
 					<div class="speech-one">
