--- a/views/writing.html
+++ b/views/writing.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 {{> components/ascii }}
 <html lang="en">
-	<head>
-		{{> components/head }}
-	</head>
-	<body>
-		{{> components/nav }}
+    <head>
+        {{> components/head }}
+    </head>
+    <body>
+        {{> components/nav }}
 
-		<div class="speech-image">
-			{{# arena }}
-			<div class="arena-block" id="section_{{ id }}">
-				<div id="arena-block-title"
-					><h2>{{ title }}</h2><div class="more">read</div>
-					<!-- link to it's id -->
+        <div class="speech-image">
+            {{# arena }}
+            <div class="arena-block" id="section_{{ id }}">
+                <div id="arena-block-title"
+                    ><h2>{{ title }}</h2><div class="more">read</div>
+                    <!-- link to it's id -->
 
-					<!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
-					<!-- not sure why date formatting here isn't working, using liquid -->
+                    <!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
+                    <!-- not sure why date formatting here isn't working, using liquid -->
 
-					<!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
-					<!-- need to work on this -->
-				</div>
-				<div class="arena-block-metadata">
-					{{# description_html }}<span class="description">{{{ description_html }}}</span>{{/ description_html }}{{# content_html }}
-					<span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
-						><br /><mark-down breaks>{{{ description }}}</mark-down></span
-					>{{/ metadata }}
-				</div>
-				{{# embed }}
-				<div id="embed-block_{{ id }}" class="embed-block">
-					<br />
-					{{{ html }}}
-				</div>
-				{{/ embed }} {{^ embed }} {{# source }} {{# url }}<br /><a href="{{ url }}">{{ url }}</a>{{/ url }} {{# image }}
-				<br />
-				<div class="url-block">
-					<img id="url-block-image_{{ id }}" class="url-block-image" src="{{# display }}{{{ url }}}{{/ display }}" />
-				</div>
-				{{/ image }} {{/ source }} {{^ source }} {{# attachment }}
-				<br />
-				<div id="video-block_{{ id }}" class="video-block">
-					<video id="video-block-attachment_{{ id }}" class="video-block-attachment" loop controls playsinline autoplay muted preload="auto">
-						<source src="{{{ static_url }}}{{ file_name }}" type="{{{ content_type }}}" />
-						<!-- fix this -->
-					</video>
-				</div>
-				{{/ attachment }} {{# image }}
-				<br />
-				<div class="image-block">
-					<img id="image-block-image_{{ id }}" class="image-block-image" src="{{# display }}{{{ url }}}{{/ display }}" />
-				</div>
-				{{/ image }} {{/ source }} {{/ embed }} </div
-			><br />
-			{{/ arena }}
-		</div>
+                    <!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
+                    <!-- need to work on this -->
+                </div>
+                <div class="arena-block-metadata">
+                    {{# description_html }}<span class="description">{{{ description_html }}}</span>{{/ description_html }}{{# content_html }}
+                    <span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
+                        ><br /><mark-down breaks>{{{ description }}}</mark-down></span
+                    >{{/ metadata }}
+                </div>
+                {{# embed }}
+                <div id="embed-block_{{ id }}" class="embed-block">
+                    <br />
+                    {{{ html }}}
+                </div>
+                {{/ embed }} {{^ embed }} {{# source }} {{# url }}<br /><a target="_blank" href="{{ url }}">{{ url }}</a>{{/ url }} {{# image }}
+                <br />
+                <div class="url-block">
+                    <img id="url-block-image_{{ id }}" class="url-block-image" src="{{# display }}{{{ url }}}{{/ display }}" />
+                </div>
+                {{/ image }} {{/ source }} {{^ source }} {{# attachment }}
+                <br />
+                <div id="video-block_{{ id }}" class="video-block">
+                    <video id="video-block-attachment_{{ id }}" class="video-block-attachment" loop controls playsinline autoplay muted preload="auto">
+                        <source src="{{{ static_url }}}{{ file_name }}" type="{{{ content_type }}}" />
+                        <!-- fix this -->
+                    </video>
+                </div>
+                {{/ attachment }} {{# image }}
+                <br />
+                <div class="image-block">
+                    <img id="image-block-image_{{ id }}" class="image-block-image" src="{{# display }}{{{ url }}}{{/ display }}" />
+                </div>
+                {{/ image }} {{/ source }} {{/ embed }} </div
+            ><br />
+            {{/ arena }}
+        </div>
 
-		{{> components/body-end }}
-	</body>
+        {{> components/body-end }}
+    </body>
 </html>
 
 <script>
-	$(document).ready(function() {
-		$(".more").click(function() {
-			$(this)
-				.parent()
-				.parent()
-				.toggleClass("peek")
-			$(this).toggleClass("reverse")
-		})
-	})
+    $(document).ready(function() {
+        $(".more").click(function() {
+            $(this)
+                .parent()
+                .parent()
+                .toggleClass("peek")
+            $(this).toggleClass("reverse")
+        })
+    })
 </script>
