relative links in nav hehe

--- a/views/components/nav.html
+++ b/views/components/nav.html
@@ -2,9 +2,9 @@
 	<div class="inline">
 		<div class="header">{{config.details.title}}</div>
 
-		<div class="title home"><a href="index.html">home</a></div>
+		<div class="title home"><a href="/">home</a></div>
 
-		<div class="title writing"><a href="writing.html">writing</a></div>
+		<div class="title writing"><a href="/writing">writing</a></div>
 
 		<!-- <div class="title hang-out"><a href="calendar.html">calendar</a></div> -->
 
