--- a/views/writing.html
+++ b/views/writing.html
@@ -10,8 +10,8 @@
         <div class="speech-image">
             {{# arena }}
             <div class="arena-block" id="section_{{ id }}">
-                <div id="arena-block-title"
-                    ><h2>{{ title }}</h2><div class="more">read</div>
+                <div class="arena-block-title" id="{{ truncTitle }}"
+                    ><h2>{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
                     <!-- link to it's id -->
 
                     <!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
@@ -25,6 +25,7 @@
                     <span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
                         ><br /><mark-down breaks>{{{ description }}}</mark-down></span
                     >{{/ metadata }}
+                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">{{{connected_at}}}</a>
                 </div>
                 {{# embed }}
                 <div id="embed-block_{{ id }}" class="embed-block">
@@ -53,12 +54,20 @@
             ><br />
             {{/ arena }}
         </div>
-
         {{> components/body-end }}
     </body>
 </html>
 
 <script>
+    {{#writing}}
+        $(window).on("load", function() {
+            $("#more-{{writing.post}}")
+                .toggleClass("reverse")
+                .parent()
+                .parent()
+                .toggleClass("peek")
+        })
+    {{/writing}}
     $(document).ready(function() {
         $(".more").click(function() {
             $(this)
