--- a/stylesheets/css/egg.css
+++ b/stylesheets/css/egg.css
@@ -1,80 +1,80 @@
 html {
-    background-color: #afafaf;
-    /*background-color: pink;*/
+	background-color: #afafaf;
+	/*background-color: pink;*/
 }
 
 @font-face {
-    font-family: "candy";
-    src: url("../../fonts/CandyPop-demo-font.woff2") format("woff2"), url("../../fonts/CandyPop-demo-font.woff") format("woff");
+	font-family: "candy";
+	src: url("../../fonts/CandyPop-demo-font.woff2") format("woff2"), url("../../fonts/CandyPop-demo-font.woff") format("woff");
 }
 
 @font-face {
-    font-family: "Kanisah";
-    src: url("../../fonts/Kanisah.woff2") format("woff2"), url("../../fonts/Kanisah.woff") format("woff");
+	font-family: "Kanisah";
+	src: url("../../fonts/Kanisah.woff2") format("woff2"), url("../../fonts/Kanisah.woff") format("woff");
 }
 
 @font-face {
-    font-family: "kerry";
-    src: url("../../fonts/RingofKerry.woff2") format("woff2"), url("../../fonts/RingofKerry.woff") format("woff");
+	font-family: "kerry";
+	src: url("../../fonts/RingofKerry.woff2") format("woff2"), url("../../fonts/RingofKerry.woff") format("woff");
 }
 
 @font-face {
-    font-family: "yellow";
-    src: url("../../fonts/yellow.woff2") format("woff2"), url("../../fonts/yellow.woff") format("woff");
+	font-family: "yellow";
+	src: url("../../fonts/yellow.woff2") format("woff2"), url("../../fonts/yellow.woff") format("woff");
 }
 
 body {
-    /*font-family: arial;*/
+	/*font-family: arial;*/
 }
 
 a {
-    text-decoration: none;
-    color: red;
-    font-family: "yellow";
+	text-decoration: none;
+	color: red;
+	font-family: "yellow";
 }
 
 .header {
-    font-family: "candy";
-    color: blue;
+	font-family: "candy";
+	color: blue;
 }
 
 .bio {
-    font-family: "candy";
-    color: red;
-    font-size: 1.1em;
+	font-family: "candy";
+	color: red;
+	font-size: 1.1em;
 }
 
 .inline {
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 1.2em;
+	text-align: center;
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 1.2em;
 }
 
 .title,
 .header,
 .ig {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 .title {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    line-height: 1em;
-    margin-bottom: 10px;
-    text-decoration: bold;
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	line-height: 1em;
+	margin-bottom: 10px;
+	text-decoration: bold;
 }
 
 .title-toggle {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .show-calendar {
-    display: none;
-    text-align: left;
-    font-size: initial;
+	display: none;
+	text-align: left;
+	font-size: initial;
 }
 
 /*.gem {
@@ -85,160 +85,203 @@ a {
 }*/
 
 .gem img {
-    width: 100px;
+	width: 100px;
 }
 
 .socials {
-    position: fixed;
-    right: 100px;
-    top: 100px;
-    transform: rotate(20deg);
-    z-index: 9;
+	position: fixed;
+	right: 100px;
+	top: 100px;
+	transform: rotate(20deg);
+	z-index: 9;
 }
 
 .socials a {
-    color: HotPink;
-    font-size: 1.5em;
+	color: HotPink;
+	font-size: 1.5em;
+}
+
+label {
+	position: fixed;
+	width: 100px;
+	text-align: left;
+	left: 10px;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: black;
+	font-size: 1.2rem;
+	z-index: 9;
+}
+
+.dark,
+.dark a,
+.dark p,
+.dark div {
+	color: black;
+	font-size: 1.2rem;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.dark a {
+	text-decoration: underline;
+}
+
+.bubble-one p,
+.bubble-two p {
+	display: inline;
+	margin: 0px;
+}
+
+.dark .emoji-one,
+.dark .emoji-two {
+	font-size: 2rem;
+}
+
+.dark span.description {
+	margin-bottom: 10px;
 }
 
 i {
-    margin: 10px;
+	margin: 10px;
 }
 
 .speech-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-    position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100%;
+	text-align: center;
+	position: relative;
 }
 
 .cover-photo img {
-    border: solid 3px HotPink;
-    margin: 20px;
+	border: solid 3px HotPink;
+	margin: 20px;
 }
 
 .subtitle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 500px;
-    margin-left: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 500px;
+	margin-left: 100px;
 }
 
 .sub-wrap {
-    position: relative;
-    height: 300px;
-    width: 300px;
+	position: relative;
+	height: 300px;
+	width: 300px;
 }
 
 .speech-one,
 .speech-two {
-    position: absolute;
-    margin-left: 50px;
+	position: absolute;
+	margin-left: 50px;
 }
 
 .speech-two {
-    position: absolute;
-    margin-left: 0px;
-    margin-top: 100px;
+	position: absolute;
+	margin-left: 0px;
+	margin-top: 100px;
 }
 
 .emoji-one,
 .emoji-two {
-    position: absolute;
-    z-index: 2;
-    bottom: 10px;
-    cursor: pointer;
-    font-size: 2em;
+	position: absolute;
+	z-index: 2;
+	bottom: 10px;
+	cursor: pointer;
+	font-size: 2em;
 }
 
 .emoji-one {
-    transform: rotateY(180deg);
-    right: 0px;
+	transform: rotateY(180deg);
+	right: 0px;
 }
 
 .emoji-two {
-    margin-top: 200px;
+	margin-top: 200px;
 }
 
 .bubble-one,
 .bubble-two {
-    position: absolute;
-    border: solid 3px HotPink;
-    background-color: #afafaf;
-    color: red;
-    padding: 5px;
-    text-align: left;
-    display: none;
-    z-index: 1;
-    bottom: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 250px;
+	position: absolute;
+	border: solid 3px HotPink;
+	background-color: #afafaf;
+	color: red;
+	padding: 5px;
+	text-align: left;
+	display: none;
+	z-index: 1;
+	bottom: 40px;
+	margin-left: 20px;
+	margin-right: 20px;
+	width: 250px;
+}
+
+.bubble-one {
+	margin-left: calc(-250px + -30px);
 }
 
 .maz {
-    display: inline-block;
-    font-family: "kerry";
+	display: inline-block;
+	font-family: "kerry";
 }
 
 .hava {
-    display: inline-block;
-    font-family: "Kanisah";
+	display: inline-block;
+	font-family: "Kanisah";
 }
 
 /*writing*/
 
 .arena-block {
-    margin: 20px;
-    width: 80%;
-    text-align: left;
-    overflow: hidden;
-    text-overflow: ellipsis; /*make ellipsis work!*/
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    border-bottom: 2px solid red;
-    padding-bottom: 10px;
+	margin: 20px;
+	width: 80%;
+	text-align: left;
+	overflow: hidden;
+	text-overflow: ellipsis; /*make ellipsis work!*/
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	border-bottom: 2px solid red;
+	padding-bottom: 10px;
 }
 
 .peek {
-    overflow: visible;
-    cursor: initial;
-    display: block;
-    border-bottom: none;
+	overflow: visible;
+	cursor: initial;
+	display: block;
+	border-bottom: none;
 }
 
 .arena-block-title {
-    font-family: "yellow";
-    font-size: 1em;
-    font-style: bold;
-    color: HotPink;
+	font-family: "yellow";
+	font-size: 1em;
+	font-style: bold;
+	color: HotPink;
 }
 
 h2 {
-    display: inline-block;
-    margin: 0;
+	display: inline-block;
+	margin: 0;
 }
 
 .description {
-    font-style: italic;
-    margin: 0;
+	font-style: italic;
+	margin: 0;
 }
 
 .more {
-    display: inline-block;
-    font-family: inital;
-    font-size: 1em;
-    color: blue;
-    margin-left: 10px;
-    cursor: pointer;
+	display: inline-block;
+	font-family: inital;
+	font-size: 1em;
+	color: blue;
+	margin-left: 10px;
+	cursor: pointer;
 }
 
 .reverse {
-    transform: rotateX(180deg);
+	transform: rotateX(180deg);
 }
