--- a/views/index.html
+++ b/views/index.html
@@ -4,29 +4,29 @@
     <head>
         {{> components/head }}
     </head>
-    <body>
+    <body class="access">
         {{> components/nav }}
 
         <div class="speech-image">
             <!-- <div class="gem"><img src="../assets/SickGentleFluke-max-1mb.gif"/></div> -->
-            <div class="bio">{{config.details.bio}}</div>
+            <div class="bio access">{{config.details.bio}}</div>
             <div class="cover-photo"><img src="../assets/TRL.png"/></div>
             <div class="subtitle">
                 <div class="sub-wrap">
                     <div class="speech-one">
                         <div class="emoji-one">💬</div>
-                        <div class="bubble-one">
+                        <div class="bubble-one access">
                             <!-- {{config.details.bubbleone}} -->
-                            the right lube is a platform for thoughts by <div class="maz">Maz Murray</div> and <div class="hava">Hava Carvajal</div>, plus
+                            <p>the right lube is a platform for thoughts by <div class="maz">Maz Murray</div> and <div class="hava">Hava Carvajal</div>, plus
                             anyone else who wants to join in!<br />
-                            contact us at: <a target="_blank" href="mailto:therightlube@gmail.com">therightlube@gmail.com</a>
+                            contact us at: <a target="_blank" href="mailto:therightlube@gmail.com">therightlube@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="sub-wrap">
                     <div class="speech-two">
                         <div class="emoji-two">💬</div>
-                        <div class="bubble-two">{{config.details.bubbletwo}}</div>
+                        <div class="bubble-two access"><p>{{config.details.bubbletwo}}</p></div>
                     </div>
                 </div>
             </div>
