--- a/views/writing.html
+++ b/views/writing.html
@@ -11,7 +11,7 @@
             {{# arena }}
             <div class="arena-block" id="section_{{ id }}">
                 <div class="arena-block-title" id="{{ truncTitle }}"
-                    ><h2>{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
+                    ><h2 class="access">{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
                     <!-- link to it's id -->
 
                     <!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
@@ -20,12 +20,12 @@
                     <!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
                     <!-- need to work on this -->
                 </div>
-                <div class="arena-block-metadata">
+                <div class="arena-block-metadata access">
                     {{# description_html }}<span class="description">{{{ description_html }}}</span>{{/ description_html }}{{# content_html }}
                     <span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
                         ><br /><mark-down breaks>{{{ description }}}</mark-down></span
                     >{{/ metadata }}
-                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">{{{connected_at}}}</a>
+                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp access">– {{{connected_at}}}</a>
                 </div>
                 {{# embed }}
                 <div id="embed-block_{{ id }}" class="embed-block">
