--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
             <div class="subtitle">
                 <div class="sub-wrap">
                     <div class="speech-one">
-                        <div class="emoji-one">💬</div>
+                        <div class="emoji-one">🗯️</div>
                         <div class="bubble-one access">
                             <!-- {{config.details.bubbleone}} -->
                             <p>the right lube is a platform for thoughts by <div class="maz">Maz Murray</div> and <div class="hava">Hava Carvajal</div>, plus
@@ -25,7 +25,7 @@
                 </div>
                 <div class="sub-wrap">
                     <div class="speech-two">
-                        <div class="emoji-two">💬</div>
+                        <div class="emoji-two">🗯️</div>
                         <div class="bubble-two access"><p>{{config.details.bubbletwo}}</p></div>
                     </div>
                 </div>
