--- a/views/writing.html
+++ b/views/writing.html
@@ -4,28 +4,33 @@
     <head>
         {{> components/head }}
     </head>
-    <body>
+    <body class="access">
         {{> components/nav }}
+
+        <div class="newsletter">
+            <div class="signup">
+                <label for="email">Join our newsletter to recieve every new text in your email:</label>
+                <input type="text" id="email" name="email" value="email" />
+            </div>
+        </div>
 
         <div class="speech-image">
             {{# arena }}
             <div class="arena-block" id="section_{{ id }}">
                 <div class="arena-block-title" id="{{ truncTitle }}"
-                    ><h2 class="access">{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
+                    ><h2>{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
                     <!-- link to it's id -->
-
                     <!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
                     <!-- not sure why date formatting here isn't working, using liquid -->
-
                     <!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
                     <!-- need to work on this -->
                 </div>
-                <div class="arena-block-metadata access">
+                <div class="arena-block-metadata">
                     {{# description_html }}<span class="description">{{{ description_html }}}</span>{{/ description_html }}{{# content_html }}
                     <span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
                         ><br /><mark-down breaks>{{{ description }}}</mark-down></span
                     >{{/ metadata }}
-                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp access">– {{{connected_at}}}</a>
+                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">– {{{connected_at}}}</a>
                 </div>
                 {{# embed }}
                 <div id="embed-block_{{ id }}" class="embed-block">
