--- a/views/writing.html
+++ b/views/writing.html
@@ -14,7 +14,7 @@
             </div>
         </div>
 
-        <div class="speech-image">
+        <div class="writing-page">
             {{# arena }}
             <div class="arena-block" id="section_{{ id }}">
                 <div class="arena-block-title" id="{{ truncTitle }}"
