--- a/stylesheets/css/egg.css
+++ b/stylesheets/css/egg.css
@@ -38,12 +38,6 @@ a {
 	color: blue;
 }
 
-.bio {
-	font-family: "candy";
-	color: red;
-	font-size: 1.1em;
-}
-
 .inline {
 	text-align: center;
 	width: 100%;
@@ -61,7 +55,7 @@ a {
 .title {
 	display: inline-block;
 	vertical-align: top;
-	width: 20%;
+	width: 13vw;
 	line-height: 1em;
 	margin-bottom: 10px;
 	text-decoration: bold;
@@ -83,7 +77,7 @@ a {
 	margin-top: 20px;
 	padding: 5px 20px 0px 20px;
 	position: relative;
-	left: calc(-59.5vw + 50%);
+	left: calc(-53vw + 50%);
 	border: 1px solid black;
 }
 
@@ -102,7 +96,7 @@ a {
 
 .socials {
 	position: fixed;
-	right: 85px;
+	right: 125px;
 	top: 100px;
 	transform: rotate(20deg);
 	z-index: 9;
@@ -182,7 +176,16 @@ i {
 	margin: 10px;
 }
 
-.speech-image,
+.home {
+	text-align: left;
+}
+
+.calendar {
+	text-align: right;
+}
+
+.bio,
+.writing-page,
 .newsletter {
 	display: flex;
 	align-items: center;
@@ -193,35 +196,57 @@ i {
 	position: relative;
 }
 
+.speech-image {
+	height: 100%;
+}
+
+.coverimage {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	width: 600px;
+	z-index: -1;
+}
+
 .coverimage img {
 	border: solid 3px HotPink;
-	margin: 20px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	/*width: 430px;*/
+	max-height: 580px;
+}
+
+.bio {
+	font-family: "candy";
+	color: red;
+	font-size: 1.1em;
+	margin: 0px;
+	text-align: center;
+	margin-top: 10px;
 }
 
 .subtitle {
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	position: absolute;
-	top: 350px;
-	margin-left: 100px;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
 }
 
 .sub-wrap {
-	position: relative;
-	height: 300px;
-	width: 300px;
 }
 
-.speech-one,
-.speech-two {
+.speech-one {
 	position: absolute;
-	margin-left: 50px;
+	margin-left: -100px;
 }
 
 .speech-two {
 	position: absolute;
-	margin-left: 0px;
+	margin-left: 80px;
 	margin-top: 100px;
 }
 
@@ -349,4 +374,14 @@ h2 {
 
 .reverse {
 	transform: rotateX(180deg);
+}
+
+@media (max-width: 1050px) {
+	.home {
+		text-align: center;
+	}
+
+	.calendar {
+		text-align: center;
+	}
 }
