--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,27 @@
                 {{/ image }} {{/ source }} {{/ embed }} {{# content_html }} {{{ content_html }}} {{/ content_html }} {{/ coverimage }}
                 <div class="bio">{{config.details.bio}}</div>
             </div>
+            <div class="links">
+                {{# links }} {{# description_html }} {{{ description_html }}} {{/ description_html }} {{# embed }}
+                <div id="embed-block_{{ id }}" class="embed-block">{{{ html }}} </div>
+                {{/ embed }} {{^ embed }} {{# source }} {{# url }}
+                <a target="_blank" href="{{ url }}">{{ url }}</a>
+                {{/ url }} {{# image }}
+                <div class="url-block">
+                    <img id="url-block-image_{{ id }}" class="url-block-image" src="{{# display }}{{{ url }}}{{/ display }}" />
+                </div>
+                {{/ image }} {{/ source }} {{^ source }} {{# attachment }}
+                <div id="video-block_{{ id }}" class="video-block">
+                    <video id="video-block-attachment_{{ id }}" class="video-block-attachment" loop controls playsinline autoplay muted preload="auto">
+                        <source src="{{{ static_url }}}{{ file_name }}" type="{{{ content_type }}}" />
+                    </video>
+                </div>
+                {{/ attachment }} {{# image }}
+                <div class="image-block">
+                    <img id="image-block-image_{{ id }}" class="image-block-image" src="{{# display }}{{{ url }}}{{/ display }}" />
+                </div>
+                {{/ image }} {{/ source }} {{/ embed }} {{# content_html }} {{{ content_html }}} {{/ content_html }} {{/ links }}
+            </div>
             <div class="subtitle">
                 <div class="sub-wrap">
                     <div class="speech-one">
