dates in writing

--- a/views/writing.html
+++ b/views/writing.html
@@ -22,8 +22,7 @@
                 <div class="arena-block-title" id="{{ truncTitle }}"
                     ><h2>{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
                     <!-- link to it's id -->
-                    <!-- <span id="date">{{ created_at | date: "%Y-%m-%d %H:%M" }}</span> -->
-                    <!-- not sure why date formatting here isn't working, using liquid -->
+                    <span id="date">{{ date }}</span>
                     <!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
                     <!-- need to work on this -->
                 </div>
