note for ana about linking to posts - search "@ana"

--- a/views/writing.html
+++ b/views/writing.html
@@ -24,6 +24,7 @@
                     <!-- link to it's id -->
                     <span id="date">{{ date }}</span>
                     <!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
+                    <!-- @ana see https://github.com/mwvd/giancarlo/blob/86c38724f8eea991766b73877634dfdc255fc132/index.js#L164 index.js (line 164) here to see how to do this -->
                     <!-- need to work on this -->
                 </div>
                 <div class="arena-block-metadata">
