--- a/views/writing.html
+++ b/views/writing.html
@@ -22,7 +22,7 @@
                 <div class="arena-block-title" id="{{ truncTitle }}"
                     ><h2>{{ title }}</h2><div class="more" id="more-{{ id }}">read</div>
                     <!-- link to it's id -->
-                    <span id="date">{{ date }}</span>
+
                     <!-- <a href="{{ id }}"><span class="link-to-post">link to indv post</span></a> -->
                     <!-- @ana see https://github.com/mwvd/giancarlo/blob/86c38724f8eea991766b73877634dfdc255fc132/index.js#L164 index.js (line 164) here to see how to do this -->
                     <!-- need to work on this -->
@@ -32,7 +32,7 @@
                     <span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
                         ><br /><mark-down breaks>{{{ description }}}</mark-down></span
                     >{{/ metadata }}
-                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">– {{{connected_at}}}</a>
+                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">– <span id="date">{{ date }}</span></a>
                 </div>
                 {{# embed }}
                 <div id="embed-block_{{ id }}" class="embed-block">
