--- a/views/writing.html
+++ b/views/writing.html
@@ -32,7 +32,7 @@
                     <span class="monogamy">{{{ content_html }}}</span>{{/ content_html }} {{# metadata }}<span class="description" id="metadata_{{id}}"
                         ><br /><mark-down breaks>{{{ description }}}</mark-down></span
                     >{{/ metadata }}
-                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">– {{{connected_at}}}</a>
+                    <a href="?view=writing&post={{{ id }}}#{{{truncTitle}}}" class="datestamp">– <span id="date">{{ date }}</span></a>
                 </div>
                 {{# embed }}
                 <div id="embed-block_{{ id }}" class="embed-block">
